added title metadata

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,7 @@
 <html>
     <head>
+        <link rel="icon" href="./logo64.png" />
+        <title>Kyle Humphrey's Live Websites</title>
         <style>
             body {
                 padding: 0;
